iRedMail-0.8.6:
    * Enable Opportunistic TLS support in Postfix when sending mail to remote
      SMTP server (smtp_tls_security_level=may).
      Thanks kotso <admin _at_ co.ge> and vlastikcz for the report.
    * Works on openSUSE-13.1 milestone 4.
    * Switch from Policyd-1.8 to Cluebringer on all Linux/BSD distributions,
      with easier white/black/greylisting management.
    * Fixed:
        + Add cron job to cleanup expired entries in Cluebringer database.

    * Drop support for below releases:
        + Debian 6 (squeeze)
        + Gentoo

    * Package update:
        + Roundcube webmail -> 0.9.4
        + phpMyAdmin -> 4.0.8

iRedMail-0.8.5:
    * Use EPEL yum repo on RHEL/CentOS 6 by default.
    * Update SQL triggers to insert value for column 'used_quota.domain'
      automatically.
    * SQL backends: Allow to assign mail list/alias as member of mailing list.
    * New SQL column and LDAP attribute for mail domain, used to store
      preferred language for newly created mail users.
      - SQL: column domain.defaultlang
      - OpenLDAP: attribute 'preferredLanguage' for mailDomain object

    * Drop support for below releases:
        + Ubuntu 12.10
        + RHEL/CentOS 5.x
        + OpenBSD 5.1, 5.2.
        + openSUSE 12.1, 12.2.

    * Fixed:
        + Incorrect Amavisd column name:
          policy.unchecked_lovers_maps (incorrect) -> policy.unchecked_lover.
        + Incorrect LDAP ACL for attribute "memberOfGroup".
          Thanks Hoang Tuan Viet <vietht _at_ vccloud.vn> for the report.

    * Package update:
        + Roundcube webmail -> 0.9.2
        + phpMyAdmin -> 4.0.4.1
        + iRedAdmin -> 0.2.2
        + iRedAPD -> 1.4.1
        + phpPgAdmin -> 5.1

iRedMail-0.8.4:
    * Enable Dovecot Master User by default, but no pre-defined account.
    * [SQL] New SQL columns in `vmail.mailbox` for per-user restriction, used
      by iRedAPD:
      allowedsenders, rejectedsenders, allowedrecipients, rejectedrecipients