@@ -69,6 +69,12 @@ thread_cache_size   = 8
 #
 #innodb_buffer_pool_size=512M
 
+# Creates each new table using its own .ibd file for storing data and indexes,
+# rather than in the system tablespace (ibdata*).
+# Reference:
+# http://dev.mysql.com/doc/refman/5.5/en/innodb-parameters.html#sysvar_innodb_file_per_table
+innodb_file_per_table
+
 #ssl-ca =
 #ssl-cert =
 #ssl-key =
