@@ -1,4 +1,5 @@
 iRedMail-0.8.6:
+    * Enable 'innodb_file_per_table' in MySQL by default.
     * Enable Opportunistic TLS support in Postfix when sending mail to remote
       SMTP server (smtp_tls_security_level=may).
       Thanks kotso <admin _at_ co.ge> and vlastikcz for the report.
